# uml-diagram

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  smithery.yaml  uml_generate.py  uml_output.puml  weather_fetcher.py
src/: middleware.py  server.py
